[package]
name = "fantaporno"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
futures-util = "0.3.29"
image = "0.25.1"
plotters = { version = "0.3.3", default-features = false, features = [
    "bitmap_backend",
    "bitmap_encoder",
    "line_series",
    "ttf",
    "chrono",
] }
reqwest = "0.12.5"
scraper = "0.19.0"
sea-orm = { version = "0.12.10", features = [
    "macros",
    "sqlx-sqlite",
    "runtime-tokio-rustls",
] }
stream_throttle = "0.5.1"
thiserror = "1.0.51"
tgbot = "0.26.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
tokio = { version = "1.35.1", features = [
    "macros",
    "rt",
    "rt-multi-thread",
    "fs",
] }

[dev-dependencies]
sea-orm = { version = "0.12.10", features = [
    "macros",
    "sqlx-sqlite",
    "runtime-tokio-rustls",
    "mock",
] }
